--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ponzeka</title>
+    <title>Paige Ponzeka</title>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <meta content='Paige Ponzeka is a freelance Web Developer based out of New York City, this is her Resume and Contact information.' name='description'>
     <meta content='Paige, Ponzeka, Developer, Freelance, Web Development, Resume, Paige Ponzeka' name='keywords'>
