--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     </section>
 
     <!-- Team -->
-    <section class="bg-light" id="Bio">
+    <section class="bg-light" id="bio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
