--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">My Work</h2>
-            <h3 class="section-subheading text-muted">Check out some of my more recent projects.</h3>
+            <h3 class="section-subheading text-muted">Check out some of my projects.</h3>
           </div>
         </div>
         <div class="row js-workitems-container">
