adding social media cards

--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Paige Ponzeka | Developer</title>
-    <meta content='Paige Ponzeka is a freelance Web Developer based out of New York City, this is her Resume and Contact information.' name='description'>
+    <meta content='Paige Ponzeka is a Full Stack Developer based out of New York City, this is her Resume and Contact information.' name='description'>
     <meta content='Paige, Ponzeka, Developer, Freelance, Web Development, Resume, Paige Ponzeka' name='keywords'>
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" value="summary">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Paige Ponzeka | Developer" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://ponzeka.com/" />
+    <meta property="og:image" content="http://ponzeka.com/social.jpg" />
+    <meta property="og:description" content="Paige Ponzeka is a Full Stack Developer based out of New York City, this is her Resume and Contact information" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
