Adding Twitter Social Shre cards

--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
     <meta property="og:title" content="Paige Ponzeka | Developer" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://ponzeka.com/" />
-    <meta property="og:image" content="http://ponzeka.com/social.jpg" />
+    <meta property="og:image" content="http://ponzeka.com/img/social.jpg" />
     <meta property="og:description" content="Paige Ponzeka is a Full Stack Developer based out of New York City, this is her Resume and Contact information" />
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@ponzeka">
+    <meta name="twitter:title" content="Paige Ponzeka | Developer">
+    <meta name="twitter:description" content="Paige Ponzeka is a Full Stack Developer based out of New York City, this is her Resume and Contact information.">
+    <meta name="twitter:creator" content="@paigetponzeka">
+    <meta name="twitter:image" content="http://www.ponzeka.com/img/t_social.jpg">
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
