Fixing card link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:title" content="Paige Ponzeka | Developer">
     <meta name="twitter:description" content="Paige Ponzeka is a Full Stack Developer based out of New York City, this is her Resume and Contact information.">
     <meta name="twitter:creator" content="@paigetponzeka">
-    <meta name="twitter:image" content="http://www.ponzeka.com/img/t_social.jpg">
+    <meta name="twitter:image" content="http://ponzeka.com/img/t_social.jpg">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
